syntax = "proto3";

package com.example.grpc;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "NotificationProto";

enum RecipientRole {
  Student = 0;
  HR = 1;
  Project_Manager = 2;
  University = 3;
  Supervisor = 4;
}

service NotificationService {
  rpc CreateNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  repeated RecipientRole roles = 1;      // multiple roles supported
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}